...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- This list view can only be accessed by admin, lets them browse-->
    <ListView
        android:id="@+id/admin_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbarThumbVertical="@color/secondaryGreyColor"
        app:layout_constraintBottom_toBottomOf="parent"
...
