...
            android:src="@color/secondaryGreyColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/go_back"
            android:padding="10dp"
...
                    android:minHeight="48dp"
                    android:text="@string/event_description"
                    android:textSize="12sp" />
            </ScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/waiting_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/primaryPurpleColor"
                android:text="@string/waiting_list_button"
                android:textColor="@color/white"
...
